--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My Assignment Portfolio</h1>
-    <p>This is my web development portfolio hosted on Microsoft Azure.</p>
+    <header>
+        <h1>Welcome to My Assignment Portfolio</h1>
+        <p>This website serves as a hub for all my web-based class assignments.</p>
+    </header>
+
+    <section>
+        <h2>Assignments</h2>
+        <ul>
+            <li><a href="assignment1.html">Assignment 1: lab1-webpage introducing members </a></li>
+            <!-- Add more assignments as needed -->
+        </ul>
+    </section>
+
+    <footer>
+        <p>&copy; 2023 Your Name. Hosted on Microsoft Azure.</p>
+    </footer>
 </body>
 </html>
