--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section>
         <h2>Assignments</h2>
         <ul>
-            <li><a href="assignment1.html">Assignment 1: lab1-webpage introducing members </a></li>
+            <li><a href="assignment-lab1.html">Assignment 1: lab1-webpage introducing members </a></li>
             <!-- Add more assignments as needed -->
         </ul>
     </section>
