--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h2>Assignments</h2>
         <ul>
             <li><a href="assignment-lab1.html">Assignment 1: lab1-webpage introducing members </a></li>
+              <li><a href="assignment-lab2-web-resume.html">Assignment 2: web resume </a></li>
             <!-- Add more assignments as needed -->
         </ul>
     </section>
